first level added (1.4)
coins are writting always
box are writting in lvl1
every platform has its id

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -20,5 +20,5 @@
     <audio id="ding" src="sounds/ding.wav">audio</audio>
     <audio id="ding2" src="sounds/ding2.wav">audio</audio>
     <audio id="bum" src="sounds/bum.wav">audio</audio>
-    <div style="user-select: none"><button id="button" onclick="UnDfunb += 1" style="font-size: 20px;">Click me!</button></div>
+    <div style="user-select: none"><button id="button" onclick="UnDfunb += 1" style="font-size: 20px; display: none;">Click me!</button></div>
 </body>
