added screen sistem
back screen and front screen

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,7 @@
     <script defer src="JumperBase/base.js"></script>
     <script defer src="start.js"></script>
     <script defer src="JumperBase/grafics.js"></script>
+    <script defer src="JumperBase/screens.js"></script>
     <script defer src="JumperBase/music.js"></script>
 
 </head>
