added overlay and stars

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,6 +7,7 @@
     <script defer src="JumperBase/special.js"></script>
     <script defer src="JumperBase/platforms.js"></script>
     <script defer src="JumperBase/base.js"></script>
+    <script defer src="JumperBase/overlay.js"></script>
     <script defer src="JumperBase/triggers.js"></script>
     <script defer src="start.js"></script>
     <script defer src="JumperBase/grafics.js"></script>
