--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,19 +2,8 @@
 
 <head>
     <title>Jumper</title>
-    <script defer src="JumperBase/Functions.js"></script>
-    <script defer src="JumperBase/movement.js"></script>
-    <script defer src="JumperBase/special.js"></script>
-    <script defer src="JumperBase/platforms.js"></script>
-    <script defer src="JumperBase/base.js"></script>
-    <script defer src="JumperBase/enemy.js"></script>
-    <script defer src="JumperBase/overlay.js"></script>
-    <script defer src="JumperBase/triggers.js"></script>
-    <script defer src="start.js"></script>
-    <script defer src="JumperBase/grafics.js"></script>
-    <script defer src="JumperBase/screens.js"></script>
-    <script defer src="JumperBase/music.js"></script>
-
+    <script type="module" src="JumperBase/base.js"> </script>
+    <script type="module" src="start.js"></script>
 </head>
 
 <body>
