--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Jumper</title>
+    <script type="module" src="JumperBase/firstScreen.js"> </script>
     <script type="module" src="JumperBase/base.js"> </script>
-    <script type="module" src="start.js"></script>
 </head>
 
 <body>
