Some design in html (2.0)

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,7 @@
     <script type="module" src="JumperBase/base.js"> </script>
 </head>
 
-<body>
+<body style="background-color: black; text-align:center;">
     <div style="white-space: nowrap;">
         <canvas id="canva" width="800" height="600" style="border: 1px solid black; user-select: none;">Canva</canvas>
     </div>
