--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,7 @@
 <body style="background-color: black; text-align:center;">
     <div style="white-space: nowrap;">
         <canvas id="canva" width="800" height="600" style="border: 1px solid black; user-select: none;">Canva</canvas>
+        <!-- <canvas id="canva" width="800" height="600" style="border: 1px solid black; user-select: none; transform: scale(1.5); position: fixed; top: 142px; left: 200px;">Canva</canvas> -->
     </div>
     <audio id="ding" src="sounds/ding.wav">audio</audio>
     <audio id="ding2" src="sounds/ding2.wav">audio</audio>
