fullscreen canva scale

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-
+<html>
 <head>
     <title>Jumper</title>
     <script type="module" src="JumperBase/firstScreen.js"> </script>
     <script type="module" src="JumperBase/base.js"> </script>
 </head>
 
-<body style="background-color: black; text-align:center;">
-    <div style="white-space: nowrap;">
+<body style="background-color: black; margin: 0; padding: 0; text-align:center;">
+    <div style="white-space: nowrap; ">
         <canvas id="canva" width="800" height="600" style="border: 1px solid black; user-select: none;">Canva</canvas>
-        <!-- <canvas id="canva" width="800" height="600" style="border: 1px solid black; user-select: none; transform: scale(1.5); position: fixed; top: 142px; left: 200px;">Canva</canvas> -->
     </div>
     <audio id="ding" src="sounds/ding.wav">audio</audio>
     <audio id="ding2" src="sounds/ding2.wav">audio</audio>
     <audio id="bum" src="sounds/bum.wav">audio</audio>
     <div style="user-select: none"><button id="button" onclick="UnDfunb += 1" style="font-size: 20px; display: none;">Click me!</button></div>
+    <button id="fullScreenbutton" style="user-select: none;">Fullscreen</button>
 </body>
+</html>
