--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,3 +17,4 @@
     <button id="fullScreenbutton" style="user-select: none;">Fullscreen</button>
 </body>
 </html>
+<!-- image-rendering: pixelated; -->
