--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Jumper</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script type="module" src="JumperBase/firstScreen.js"> </script>
     <script type="module" src="JumperBase/base.js"> </script>
 </head>
