--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Jumper</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../wwwroot/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./wwwroot/favicon.ico">
 	<script>
-		window.location.href = "../wwwroot/index.html";
+		window.location.href = "https://mixelte.github.io/Jumper/wwwroot/index.html";
 	</script>
 </head>
 
 <body style="background-color: black; margin: 0; padding: 0; height: 100vh; display: flex; justify-content: center; align-items: center;">
-	<button><a href="../wwwroot/index.html">Start!</a></button>
+	<button><a href="https://mixelte.github.io/Jumper/wwwroot/index.html">Start!</a></button>
 </body>
 </html>
 <!-- image-rendering: pixelated; -->
